--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="p1"></div>
     <div class="p2"></div>
     <div class="p3"></div>
+    <div class="p4"></div>
     <script src="app.js"></script>
 </body>
 </html>
