Ajustada la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
 
     <div id="navbar">
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
+        <a href="#home">Inicio</a>
+        <a href="#news">Sobre mi</a>
+        <a href="#contact">Proyectos</a>
+        <a href="#contact">Contacto</a>
     </div>
     <div class="p1"></div>
     <div class="p2"></div>
